--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl_phone_field: ^3.1.0
   toggle_switch: ^2.0.1
   dropdown_button2: ^1.7.1
+  flutter_rating_bar: ^4.0.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
