--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   toggle_switch: ^2.0.1
   dropdown_button2: ^1.7.1
   flutter_rating_bar: ^4.0.1
-  
+  diamond_bottom_bar: ^1.0.0
+  font_awesome_flutter: ^10.4.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
